--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Home Work</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="coursera.css">
+  <link rel="stylesheet" href="css/coursera.css">
 </head>
 <body>
 <h1>Hello my Coursera mates!</h1>
